--- a/git-basics.tex
+++ b/git-basics.tex
@@ -33,11 +33,11 @@
   \end{center}
 \end{frame}
 
-\section[]{Overview}
-\frame{
-\frametitle{Overview}
-\tableofcontents
-}
+%% \section[]{Overview}
+%% \frame{
+%% \frametitle{Overview}
+%% \tableofcontents
+%% }
 
 \begin{frame}[fragile]
   \frametitle{Revisions}
@@ -119,7 +119,7 @@
 \end{frame}
 
 \begin{frame}[fragile]
-  \frametitle{repository relationships (traditional client-server)}
+  \frametitle{Repository relationships (traditional client-server)}
 
   \begin{center}
     \begin{tikzpicture}
@@ -140,7 +140,7 @@
 \end{frame}
 
 \begin{frame}[fragile]
-  \frametitle{repository relationships (git/distributed)}
+  \frametitle{Repository relationships (git/distributed)}
 
   \begin{center}
     \begin{tikzpicture}
@@ -163,6 +163,7 @@
       \onslide<4->{
         \node (index) [repo, below right of=workdir, yshift=-2cm] {Index (staging)};
         \draw [darrow] (workdir) -- (index);
+        \draw [darrow] (local) -- (index);
       }
       \onslide<5->{
         \node (stash) [repo, left of=index, xshift=-2cm] {Stash};
@@ -177,22 +178,26 @@
 
   \begin{description}
   \item[blob] Raw file content; referenced by SHA1 hash
+    \pause
   \item[tree] Directory, containing blobs and nested trees; referenced by SHA1 hash
+    \pause
   \item[commit] Change set, containing tree hash, parent hash, author+committer, description; referenced by SHA1 hash
+    \pause
   \item[tag] Label for a commit, containing commit hash and description; referenced by name
-  \item[ref] Branch name, pointing to a commit hash; referenced by name
+    \pause
+  \item[ref] Branch name/``head'', pointing to a commit hash; referenced by name
   \end{description}
 \end{frame}
 
-\section[]{Acknowledgements}
+%% \section[]{Acknowledgements}
 
-\frame{
-  \frametitle{Acknowledgements}
-  \begin{center}
-    \vcenteredhbox{\includegraphics[width=0.25\textwidth]{ome}} \hfill
-    \vcenteredhbox{\includegraphics[width=0.2\textwidth]{dundee}}\hfill
-    \vcenteredhbox{\includegraphics[width=0.5\textwidth]{wellcome}}
-  \end{center}
-}
+%% \frame{
+%%   \frametitle{Acknowledgements}
+%%   \begin{center}
+%%     \vcenteredhbox{\includegraphics[width=0.25\textwidth]{ome}} \hfill
+%%     \vcenteredhbox{\includegraphics[width=0.2\textwidth]{dundee}}\hfill
+%%     \vcenteredhbox{\includegraphics[width=0.5\textwidth]{wellcome}}
+%%   \end{center}
+%% }
 
 \end{document}
