Add current state

--- a/common.tex
+++ b/common.tex
@@ -8,6 +8,7 @@
 \usepackage{verbatim}
 \usepackage{setspace}
 \usepackage{url}
+\usepackage{hyperref}
 
 \usepackage{fontspec}
 \setmonofont{Latin Modern Mono}
